Add APIResponseSchema to listContents
