# finish/src/main/webapp/META-INF/openapi.yaml
@@ -34,18 +34,7 @@ paths:
           content:
             application/json:
               schema:
-                description: POJO that represents the inventory contents.
-                required:
-                - systems
-                type: object
-                properties:
-                  systems:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/SystemData'
-                  total:
-                    format: int32
-                    type: integer
+                $ref: '#/components/schemas/InventoryList'
   /inventory/systems/{hostname}:
     get:
       summary: Get JVM system properties for particular host
